--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nextjs-starter-prismic-multi-page",
-  "version": "0.0.0",
+  "name": "charlesharwood",
+  "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
-  "author": "Prismic <contact@prismic.io> (https://prismic.io)",
+  "author": "Charles Harwood <charles@harwood.digital> (https://harwood.digital)",
   "scripts": {
     "dev": "concurrently \"npm:next:dev\" \"npm:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
     "next:dev": "next",
@@ -14,25 +14,39 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/pro-light-svg-icons": "^6.5.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prismicio/client": "^7.3.1",
-    "@prismicio/next": "^1.4.0",
+    "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.3",
-    "clsx": "^2.0.0",
-    "next": "^14.0.1",
+    "clsx": "^2.1.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.23",
+    "@slicemachine/adapter-next": "^0.3.31",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/node": "^20.10.8",
+    "@types/react": "18.2.47",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.1",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "slice-machine-ui": "^1.19.1",
-    "tailwindcss": "^3.3.5"
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-unicorn": "^50.0.1",
+    "postcss": "^8.4.33",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "slice-machine-ui": "^1.22.1",
+    "tailwindcss": "^3.4.1"
   }
 }
