--- a/slicemachine.config.json
+++ b/slicemachine.config.json
@@ -1,6 +1,6 @@
 {
   "libraries": ["./src/slices"],
   "adapter": "@slicemachine/adapter-next",
-  "repositoryName": "nextjs-starter-prismic-multi-page",
+  "repositoryName": "charlesharwood",
   "localSliceSimulatorURL": "http://localhost:3000/slice-simulator"
 }
