fix(token-leak): revoke fontawesome pro npm token and replace with newly generated token in .env

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=DBC6D8FD-502A-4B87-8E9F-810CEC356A84
+//npm.fontawesome.com/:_authToken=$NPM_CONFIG_FONT_AWESOME_TOKEN
