--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
     "@prismicio/react": "^2.7.3",
     "clsx": "^2.1.0",
     "next": "^14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.31",
+    "@slicemachine/adapter-next": "^0.3.32",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/node": "^20.10.8",
-    "@types/react": "18.2.47",
+    "@types/node": "^20.11.3",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
@@ -41,12 +43,12 @@
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unicorn": "^50.0.1",
     "postcss": "^8.4.33",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "slice-machine-ui": "^1.22.1",
+    "slice-machine-ui": "^1.22.2",
     "tailwindcss": "^3.4.1"
   }
 }
