--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
-  "author": "Charles Harwood <charles@harwood.digital> (https://harwood.digital)",
+  "author": "Charles Harwood <charles@harwood.digital> (https://charlesharwood.dev)",
   "scripts": {
     "dev": "concurrently \"npm:next:dev\" \"npm:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
     "next:dev": "next",
@@ -14,41 +14,41 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/pro-light-svg-icons": "^6.5.1",
-    "@fortawesome/pro-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prismicio/client": "^7.3.1",
-    "@prismicio/next": "^1.5.0",
-    "@prismicio/react": "^2.7.3",
-    "clsx": "^2.1.0",
-    "next": "^14.0.4",
-    "nodemailer": "^6.9.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
-    "zustand": "^4.4.7"
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "@fortawesome/free-brands-svg-icons": "6.5.1",
+    "@fortawesome/pro-light-svg-icons": "6.5.1",
+    "@fortawesome/pro-solid-svg-icons": "6.5.1",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@prismicio/client": "7.3.1",
+    "@prismicio/next": "1.5.0",
+    "@prismicio/react": "2.7.3",
+    "clsx": "2.1.0",
+    "next": "14.1.0",
+    "nodemailer": "6.9.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.3.3",
+    "zustand": "4.5.0"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.32",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/node": "^20.11.3",
-    "@types/nodemailer": "^6.4.14",
+    "@slicemachine/adapter-next": "0.3.33",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@types/node": "20.11.5",
+    "@types/nodemailer": "6.4.14",
     "@types/react": "18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unicorn": "^50.0.1",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.2",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "slice-machine-ui": "^1.22.2",
-    "tailwindcss": "^3.4.1"
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.17",
+    "concurrently": "8.2.2",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-typescript": "3.0.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-unicorn": "50.0.1",
+    "postcss": "8.4.33",
+    "prettier": "3.2.4",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "slice-machine-ui": "1.23.0",
+    "tailwindcss": "3.4.1"
   }
 }
