--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,14 @@
     ],
     "unicorn/no-array-callback-reference": "off",
     "unicorn/no-useless-undefined": "off", // causes eslint to remove usages of undefined e.g. `someFunction(undefined)` which is dangerous and not advisable
-    "unicorn/prevent-abbreviations": "off" // this one is annoying due to prevalence of the term Props within React code
+    "unicorn/prevent-abbreviations": "off", // this one is annoying due to prevalence of the term Props within React code
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
+      }
+    ]
   },
   "overrides": [
     {
