--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,8 @@
   // Extension Settings
   "eslint.enable": true,
   "eslint.format.enable": false, // formatting is handled by prettier
-  "prettier.enable": true
+  "prettier.enable": true,
+  "[svg]": {
+    "editor.defaultFormatter": "jock.svg"
+  }
 }
