--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
-  "author": "Charles Harwood <charles@harwood.digital> (https://charlesharwood.dev)",
+  "author": "Charles Harwood <info@charlesharwood.dev> (https://charlesharwood.dev)",
   "scripts": {
     "dev": "concurrently \"npm:next:dev\" \"npm:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
     "next:dev": "next",
@@ -11,7 +11,8 @@
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "validate": "tsc --noEmit"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.1",
@@ -24,17 +25,15 @@
     "@prismicio/react": "2.7.3",
     "clsx": "2.1.0",
     "next": "14.1.0",
-    "nodemailer": "6.9.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3",
     "zustand": "4.5.0"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "0.3.33",
+    "@slicemachine/adapter-next": "0.3.34",
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "@types/node": "20.11.5",
-    "@types/nodemailer": "6.4.14",
+    "@types/node": "20.11.13",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.17",
@@ -48,7 +47,7 @@
     "postcss": "8.4.33",
     "prettier": "3.2.4",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "slice-machine-ui": "1.23.0",
+    "slice-machine-ui": "1.23.1",
     "tailwindcss": "3.4.1"
   }
 }
