--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -99,6 +99,21 @@
           }
         ]
       }
+    },
+    // unit-test specific
+    {
+      "files": [
+        "**/*.test.{js,jsx,ts,tsx}",
+        "**/__mocks__/**/*.{js,jsx,ts,tsx}"
+      ],
+      "extends": [
+        "plugin:jest/recommended",
+        "plugin:jest-formatting/recommended",
+        "plugin:testing-library/react"
+      ],
+      "rules": {
+        "unicorn/filename-case": "off"
+      }
     }
   ]
 }
