--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "next lint",
     "slicemachine": "start-slicemachine",
     "format": "prettier --write .",
-    "validate": "tsc --noEmit"
+    "validate": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.1",
@@ -33,8 +37,11 @@
   "devDependencies": {
     "@slicemachine/adapter-next": "0.3.34",
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "@types/node": "20.11.13",
-    "@types/react": "18.2.48",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.55",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.17",
     "concurrently": "8.2.2",
@@ -42,12 +49,18 @@
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-typescript": "3.0.0",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-unicorn": "50.0.1",
-    "postcss": "8.4.33",
-    "prettier": "3.2.4",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "eslint-plugin-unicorn": "51.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "8.4.34",
+    "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
     "slice-machine-ui": "1.23.1",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "ts-node": "^10.9.2"
   }
 }
