--- a/package.json
+++ b/package.json
@@ -24,43 +24,44 @@
     "@fortawesome/pro-light-svg-icons": "6.6.0",
     "@fortawesome/pro-solid-svg-icons": "6.6.0",
     "@fortawesome/react-fontawesome": "0.2.2",
-    "@prismicio/client": "7.8.0",
-    "@prismicio/next": "1.6.0",
-    "@prismicio/react": "2.8.0",
+    "@prismicio/client": "7.11.0",
+    "@prismicio/next": "1.7.0",
+    "@prismicio/react": "2.9.0",
     "clsx": "2.1.1",
-    "next": "14.2.5",
+    "next": "14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "typescript": "5.5.4",
-    "zustand": "4.5.4"
+    "swiper": "11.1.14",
+    "typescript": "5.6.2",
+    "zustand": "4.5.5"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "0.3.45",
+    "@slicemachine/adapter-next": "0.3.49",
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "@testing-library/jest-dom": "6.4.8",
-    "@testing-library/react": "16.0.0",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.14.15",
-    "@types/react": "18.3.3",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@types/jest": "29.5.13",
+    "@types/node": "20.16.10",
+    "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
-    "concurrently": "8.2.2",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "concurrently": "9.0.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-typescript": "3.0.0",
-    "eslint-plugin-jest": "28.8.0",
+    "eslint-plugin-jest": "28.8.3",
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-testing-library": "6.2.2",
+    "eslint-plugin-testing-library": "6.3.0",
     "eslint-plugin-unicorn": "55.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "postcss": "8.4.41",
+    "postcss": "8.4.47",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
-    "slice-machine-ui": "2.4.1",
-    "tailwindcss": "3.4.9",
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "slice-machine-ui": "2.7.1",
+    "tailwindcss": "3.4.13",
     "ts-node": "10.9.2"
   }
 }
