--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,19 +6,13 @@
     "next/core-web-vitals",
     "prettier"
   ],
-  "plugins": [
-    "prettier"
-  ],
+  "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
     "import/order": [
       "warn",
       {
-        "groups": [
-          "builtin",
-          "external",
-          "internal"
-        ],
+        "groups": ["builtin", "external", "internal"],
         "pathGroups": [
           {
             "pattern": "react",
@@ -26,9 +20,7 @@
             "position": "before"
           }
         ],
-        "pathGroupsExcludedImportTypes": [
-          "react"
-        ],
+        "pathGroupsExcludedImportTypes": ["react"],
         "newlines-between": "always",
         "alphabetize": {
           "order": "asc",
@@ -38,6 +30,7 @@
     ],
     "unicorn/no-array-callback-reference": "off",
     "unicorn/no-useless-undefined": "off", // causes eslint to remove usages of undefined e.g. `someFunction(undefined)` which is dangerous and not advisable
+    "unicorn/prefer-global-this": "off", // rule seems half-baked, it enforces usage of `globalThis` even for functions that are specific to `window`
     "unicorn/prevent-abbreviations": "off", // this one is annoying due to prevalence of the term Props within React code
     "@typescript-eslint/no-unused-vars": [
       "error",
@@ -49,19 +42,14 @@
   },
   "overrides": [
     {
-      "files": [
-        "**/*.js?(x)"
-      ],
+      "files": ["**/*.js?(x)"],
       "rules": {
         "@typescript-eslint/no-var-requires": "off",
         "unicorn/prefer-module": "off"
       }
     },
     {
-      "files": [
-        "**/*.tsx",
-        "**/*.jsx"
-      ],
+      "files": ["**/*.tsx", "**/*.jsx"],
       "rules": {
         "unicorn/no-null": "off",
         "unicorn/filename-case": [
@@ -73,9 +61,7 @@
       }
     },
     {
-      "files": [
-        "**/app/**/*.tsx"
-      ],
+      "files": ["**/app/**/*.tsx"],
       "rules": {
         "unicorn/filename-case": [
           "error",
@@ -87,10 +73,7 @@
     },
     // hooks-specific
     {
-      "files": [
-        "**/hooks/**/*.ts",
-        "**/use*.ts"
-      ],
+      "files": ["**/hooks/**/*.ts", "**/use*.ts"],
       "rules": {
         "unicorn/filename-case": [
           "error",
