--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,10 @@ on:
   push:
     branches:
       - main
+      - develop
       - release/*
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   test:
     name: Test App
