--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.6.0",
-    "@fortawesome/free-brands-svg-icons": "6.6.0",
-    "@fortawesome/pro-light-svg-icons": "6.6.0",
-    "@fortawesome/pro-solid-svg-icons": "6.6.0",
+    "@fortawesome/fontawesome-svg-core": "6.7.1",
+    "@fortawesome/free-brands-svg-icons": "6.7.1",
+    "@fortawesome/pro-light-svg-icons": "6.7.1",
+    "@fortawesome/pro-solid-svg-icons": "6.7.1",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@prismicio/client": "7.12.0",
     "@prismicio/next": "1.7.1",
@@ -30,19 +30,19 @@
     "clsx": "2.1.1",
     "next": "15.0.3",
     "node-mailjet": "6.0.6",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "swiper": "11.1.14",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "swiper": "11.1.15",
     "typescript": "5.6.3",
     "zustand": "5.0.1"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "0.3.56",
+    "@slicemachine/adapter-next": "0.3.57",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.0.1",
     "@types/jest": "29.5.14",
-    "@types/node": "22.9.0",
+    "@types/node": "22.9.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "10.4.20",
@@ -54,14 +54,14 @@
     "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-testing-library": "6.4.0",
-    "eslint-plugin-unicorn": "56.0.0",
+    "eslint-plugin-testing-library": "6.5.0",
+    "eslint-plugin-unicorn": "56.0.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.4.49",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.8",
-    "slice-machine-ui": "2.10.2",
+    "prettier-plugin-tailwindcss": "0.6.9",
+    "slice-machine-ui": "2.10.3",
     "tailwindcss": "3.4.15",
     "ts-node": "10.9.2"
   },
