feat(animation): add animated page transitions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,6 @@
   // Extension Settings
   "eslint.enable": true,
   "eslint.format.enable": false, // formatting is handled by prettier
-  "prettier.enable": true
+  "prettier.enable": true,
+  "cSpell.words": ["gsap", "mailjet"]
 }
