--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@prismicio/next": "1.7.1",
     "@prismicio/react": "2.9.1",
     "clsx": "2.1.1",
+    "gsap": "3.12.5",
     "next": "15.0.3",
+    "next-transition-router": "0.2.5",
     "node-mailjet": "6.0.6",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
