--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,5 @@
 .slicemachine
 .next
+# auto-generated mocks and models from slicemachine
+src/components/slices/**/mocks.json
+src/components/slices/**/model.json
