--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint",
     "slicemachine": "start-slicemachine",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "validate": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
