--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@prismicio/client": "7.12.0",
     "@prismicio/next": "1.7.1",
     "@prismicio/react": "2.9.1",
+    "@vercel/analytics": "1.4.1",
+    "@vercel/speed-insights": "1.1.0",
     "clsx": "2.1.1",
     "gsap": "3.12.5",
     "next": "15.0.3",
