--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "license": "Apache-2.0",
   "author": "Charles Harwood <info@charlesharwood.dev> (https://charlesharwood.dev)",
   "scripts": {
-    "dev": "concurrently \"npm:next:dev\" \"npm:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
-    "next:dev": "next",
+    "dev": "concurrently \"npm:dev:next\" \"npm:dev:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
+    "dev:next": "next dev",
+    "dev:slicemachine": "start-slicemachine",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "slicemachine": "start-slicemachine",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "lint": "next lint",
     "validate": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,6 +25,7 @@
     "@fortawesome/pro-light-svg-icons": "6.7.1",
     "@fortawesome/pro-solid-svg-icons": "6.7.1",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@next/bundle-analyzer": "15.0.3",
     "@prismicio/client": "7.12.0",
     "@prismicio/next": "1.7.1",
     "@prismicio/react": "2.9.1",
@@ -42,13 +43,13 @@
     "zustand": "5.0.1"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "0.3.57",
+    "@slicemachine/adapter-next": "0.3.58",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.0.1",
     "@types/jest": "29.5.14",
-    "@types/node": "22.9.3",
+    "@types/node": "22.9.4",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "10.4.20",
