--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/pro-light-svg-icons": "6.7.1",
     "@fortawesome/pro-solid-svg-icons": "6.7.1",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@gsap/react": "2.1.1",
     "@next/bundle-analyzer": "15.0.3",
     "@prismicio/client": "7.12.0",
     "@prismicio/next": "1.7.1",
@@ -49,7 +50,7 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.0.1",
     "@types/jest": "29.5.14",
-    "@types/node": "22.9.4",
+    "@types/node": "22.10.0",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "10.4.20",
@@ -66,7 +67,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.4.49",
-    "prettier": "3.3.3",
+    "prettier": "3.4.1",
     "prettier-plugin-tailwindcss": "0.6.9",
     "slice-machine-ui": "2.10.4",
     "tailwindcss": "3.4.15",
