--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prismicio/client": "7.12.0",
     "@prismicio/next": "1.7.1",
     "@prismicio/react": "2.9.1",
+    "@sentry/nextjs": "8.42.0",
     "@vercel/analytics": "1.4.1",
     "@vercel/speed-insights": "1.1.0",
     "clsx": "2.1.1",
