--- a/package.json
+++ b/package.json
@@ -26,38 +26,40 @@
     "@fortawesome/pro-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@gsap/react": "2.1.1",
-    "@next/bundle-analyzer": "15.1.3",
-    "@prismicio/client": "7.13.1",
+    "@next/bundle-analyzer": "15.1.4",
+    "@prismicio/client": "7.14.0",
     "@prismicio/next": "1.7.1",
     "@prismicio/react": "2.9.1",
-    "@sentry/nextjs": "8.47.0",
+    "@sentry/nextjs": "8.48.0",
     "@vercel/analytics": "1.4.1",
     "@vercel/speed-insights": "1.1.0",
     "clsx": "2.1.1",
     "gsap": "3.12.5",
-    "next": "15.1.3",
+    "next": "15.1.4",
     "next-transition-router": "0.2.7",
     "node-mailjet": "6.0.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "typescript": "5.7.2",
-    "zustand": "5.0.2"
+    "typescript": "5.7.3",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "0.3.61",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "@slicemachine/adapter-next": "0.3.62",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.10.4",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/node": "22.10.6",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
     "autoprefixer": "10.4.20",
     "concurrently": "9.1.2",
-    "eslint": "8.57.1",
-    "eslint-config-next": "15.1.3",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.18.0",
+    "eslint-config-next": "15.1.4",
+    "eslint-config-prettier": "10.0.1",
     "eslint-config-typescript": "3.0.0",
     "eslint-plugin-jest": "28.10.0",
     "eslint-plugin-jest-formatting": "3.1.0",
@@ -66,10 +68,10 @@
     "eslint-plugin-unicorn": "56.0.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "postcss": "8.4.49",
+    "postcss": "8.5.1",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "0.6.9",
-    "slice-machine-ui": "2.11.1",
+    "slice-machine-ui": "2.12.0",
     "tailwindcss": "3.4.17",
     "ts-node": "10.9.2"
   }
