--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:next": "next dev",
     "dev:slicemachine": "start-slicemachine",
     "build": "next build",
+    "build:analyze": "ANALYZE=true npm run build",
     "start": "next start",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -26,7 +27,7 @@
     "@fortawesome/pro-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@gsap/react": "2.1.2",
-    "@next/bundle-analyzer": "15.1.4",
+    "@next/bundle-analyzer": "15.1.5",
     "@prismicio/client": "7.15.1",
     "@prismicio/next": "1.7.1",
     "@prismicio/react": "2.9.1",
@@ -35,7 +36,7 @@
     "@vercel/speed-insights": "1.1.0",
     "clsx": "2.1.1",
     "gsap": "3.12.7",
-    "next": "15.1.4",
+    "next": "15.1.5",
     "next-transition-router": "0.2.7",
     "node-mailjet": "6.0.6",
     "react": "19.0.0",
@@ -44,9 +45,9 @@
     "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@slicemachine/adapter-next": "0.3.63",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
+    "@slicemachine/adapter-next": "0.3.65",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
@@ -58,12 +59,12 @@
     "autoprefixer": "10.4.20",
     "concurrently": "9.1.2",
     "eslint": "9.18.0",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "15.1.5",
     "eslint-config-prettier": "10.0.1",
     "eslint-config-typescript": "3.0.0",
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-jest-formatting": "3.1.0",
-    "eslint-plugin-prettier": "5.2.2",
+    "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-testing-library": "7.1.1",
     "eslint-plugin-unicorn": "56.0.1",
     "jest": "29.7.0",
@@ -71,7 +72,7 @@
     "postcss": "8.5.1",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "0.6.10",
-    "slice-machine-ui": "2.12.1",
+    "slice-machine-ui": "2.12.2",
     "tailwindcss": "3.4.17",
     "ts-node": "10.9.2"
   }
