--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@gsap/react": "2.1.2",
     "@next/bundle-analyzer": "15.2.3",
     "@prismicio/client": "7.17.0",
-    "@prismicio/next": "2.0.0",
+    "@prismicio/next": "^2.0.1-alpha.1",
     "@prismicio/react": "3.0.0",
     "@sentry/nextjs": "8.55.0",
     "@vercel/analytics": "1.5.0",
