--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "prettier-plugin-tailwindcss": "^0.6.12",
     "slice-machine-ui": "^2.16.1",
     "tailwindcss": "^4.1.10",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.34.1"
   }
 }
