--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "next build",
     "build:analyze": "ANALYZE=true npm run build",
     "start": "next start",
+    "start:coverage-report": "serve ./coverage/lcov-report -p 3001 --config ../../serve.json",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
@@ -18,64 +19,65 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coverage-report": "npm run test:coverage && npm run start:coverage-report",
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/pro-light-svg-icons": "^6.7.2",
-    "@fortawesome/pro-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/pro-light-svg-icons": "^7.0.1",
+    "@fortawesome/pro-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "@gsap/react": "^2.1.2",
-    "@next/bundle-analyzer": "^15.4.2",
-    "@prismicio/client": "^7.18.0",
+    "@next/bundle-analyzer": "^15.5.2",
+    "@prismicio/client": "^7.20.1",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
-    "@sentry/nextjs": "^9.40.0",
+    "@sentry/nextjs": "^10.10.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
-    "next": "^15.4.2",
+    "next": "^15.5.2",
     "next-transition-router": "^0.2.11",
-    "node-mailjet": "^6.0.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "typescript": "^5.8.3",
-    "zustand": "^5.0.6"
+    "node-mailjet": "^6.0.9",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "typescript": "^5.9.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.31.0",
-    "@slicemachine/adapter-next": "^0.3.81",
+    "@eslint/js": "^9.35.0",
+    "@slicemachine/adapter-next": "^0.3.83",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.15",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
-    "concurrently": "^9.2.0",
-    "eslint": "^9.31.0",
-    "eslint-config-next": "^15.4.2",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-prettier": "^5.5.3",
-    "eslint-plugin-testing-library": "^7.6.0",
-    "eslint-plugin-unicorn": "^60.0.0",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-testing-library": "^7.6.8",
+    "eslint-plugin-unicorn": "^61.0.2",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "slice-machine-ui": "^2.17.1",
-    "tailwindcss": "^4.1.11",
+    "slice-machine-ui": "^2.18.1",
+    "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.43.0"
   }
 }
