--- a/slicemachine.config.json
+++ b/slicemachine.config.json
@@ -1,6 +1,11 @@
 {
-  "libraries": ["./src/components/slices"],
-  "adapter": "@slicemachine/adapter-next",
   "repositoryName": "charlesharwood",
-  "localSliceSimulatorURL": "http://localhost:3000/slice-simulator"
+  "libraries": ["./src/components/slices"],
+  "localSliceSimulatorURL": "http://localhost:3000/slice-simulator",
+  "adapter": {
+    "resolve": "@slicemachine/adapter-next",
+    "options": {
+      "typescript": true
+    }
+  }
 }
